<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_version"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_copyright"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="" />

        <View
            android:id="@+id/bar1"
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:id="@+id/remove_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/remove_ads"
                android:textStyle="bold" />

            <View
                android:id="@+id/bar2"
                android:layout_width="wrap_content"
                android:layout_height="1dip"
                android:background="?android:attr/dividerHorizontal" />
        </LinearLayout>

        <TextView
            android:id="@+id/source_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/source_code"
            android:textStyle="bold" />

        <View
            android:id="@+id/bar3"
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="?android:attr/dividerHorizontal" />

        <TextView
            android:id="@+id/licenses_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/about_licenses"
            android:textStyle="bold" />

        <View
            android:id="@+id/bar4"
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="?android:attr/dividerHorizontal" />

        <ImageButton
            android:id="@+id/googlePlayBadge"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/badge" />
    </LinearLayout>

</ScrollView>